- Corrected contrast in styling (black to slightly lighter contrast). - Added my name to footer section. - Added Resume section with relevant image. - Updated GitHub image. - Stylized links to be buttons instead for better presentation. - Corrected "GitHub" section text to be more consistent with overall order. - Added "Résumé" NavBar section.

--- a/stylesheet/portfolio.css
+++ b/stylesheet/portfolio.css
@@ -52,9 +52,32 @@ p:hover {
     transform: scale(1.1); /* This makes the elements with class "center" increase in size by 1.1 when hovered over */
 }
 
+.button {
+    border-radius: 8px;
+    background-color: rgb(15, 15, 15); 
+    color: white; 
+    font-weight: bold;
+    padding: 12px 20px; 
+    border: none; 
+    border-radius: 4px; /* Gives the submit button the same rounded corners as the text boxes */
+    cursor: pointer; /* Changes the cursor to pointer when over the submit button */
+    display: block; /* Allows the submit button to be centered */
+    margin-left: auto; /* In combination with "margin-right: auto" this will center the submit button */
+    margin-right: auto;
+    font-family: Perpetua, Rockwell Extra Bold;
+}
+
+.button:hover {
+    background-color: white; /* Turns the background of the submit button white when the user hovers over it */
+    color: rgb(15, 15, 15); /* Turns the font black when hovered over */
+    transform: scale(1.25); /* Makes the button increase 1.5 times in size */
+    transition: transform 1.25s; /* Makes the transform effect last 1.5 seconds */
+}
+
 /* Anchor elements */
 a {
     color: blue; /* This ensures all links are blue */
+    text-decoration: none;
 }
 
 /* Quotation elements */
@@ -99,7 +122,7 @@ footer {
 /***** NAVBAR STYLING *****/
 .Navbar {
     overflow: hidden; /* This ensures that any content that overflows beyond the boundary of our nav bar is not displayed */
-    background-color: black; /* This colors the navbar black */
+    background-color: rgb(15, 15, 15); /* This colors the navbar black */
     position: fixed; /* This keeps the navbar at the top of the screen as we scroll */
     top: 0; /* This ensures no space is displayed above the navbar */
     width: 100%; /* This makes the navbar span the entire width of the page */
@@ -146,7 +169,7 @@ footer {
 /* Navbar hover effects */
 .Navbar a:hover {
     background-color: #f4f4f4; /* Defines the background color that will display when you hover over the link */
-    color: black; /* This defines the font color that will display when navbar a elements are hovered over */
+    color: rgb(15, 15, 15); /* This defines the font color that will display when navbar a elements are hovered over */
     font-weight: bold; /* This makes the text on the navbar bold when hovered over */
 }
 
@@ -204,7 +227,7 @@ footer {
     height: 400px;
     background-color: #4d4d4d;
     border-bottom: solid 1px #444343;
-    border-right: solid 2px #444343;
+    border-right: solid 1px #444343;
 }
 
 .Column_2 {
@@ -215,6 +238,7 @@ footer {
     height: 400px; /* This sets the height of the column to 400px -  this may need to be adjusted depending on the text you enter */
     background-color: #f2f2f2; /* Sets the background color of the columns with class Column_1 */
     border-bottom: solid 1px #444343;
+    border-left: solid 1px #444343;
 }
 
 /* Screens 576px and smaller will display a scroll bar if the text overflows the column height */
@@ -260,7 +284,7 @@ input[type=text]:hover {
 
 /* Submit button */
 input[type=submit] {
-    background-color: black; /* Sets the background color of the submit button to black */
+    background-color: rgb(15, 15, 15); /* Sets the background color of the submit button to black */
     color: white; /* Sets the font color of the Submit button to white */
     font-weight: bold; /* Makes the font of the submit button bold */
     padding: 12px 20px; /* Adds padding to the submit button */
@@ -276,7 +300,7 @@ input[type=submit] {
 /* Hover effect for submit button */
 input[type=submit]:hover {
     background-color: white; /* Turns the background of the submit button white when the user hovers over it */
-    color: black; /* Turns the font black when hovered over */
+    color: rgb(15, 15, 15); /* Turns the font black when hovered over */
     transform: scale(1.25); /* Makes the button increase 1.5 times in size */
     transition: transform 1.25s; /* Makes the transform effect last 1.5 seconds */
 }
